# WITH-US

./: .env.example  .gitignore  .replit  nixpacks.toml  pnpm-lock.yaml  pyproject.toml  replit.md  vercel.json
artifacts/api-server/: package.json
artifacts/api-server/src/: app.ts  index.ts  storage.ts  stripeClient.ts  webhookHandlers.ts
artifacts/api-server/src/routes/: admin-auth.ts  auth.ts  (+4 more)
artifacts/bg-python-server/: app.py
artifacts/bg-remover/: index.html  package.json  requirements.yaml  vite.config.ts
artifacts/bg-remover/.replit-artifact/: artifact.toml
artifacts/bg-remover/public/: watermark-worker.js
artifacts/bg-remover/src/: App.tsx  index.css
attached_assets/: Pasted--div-class-tabindex-1-aria-controls-combobox-list-r-d5-_1773762823123.txt  Pasted--label-data-version-v1-div-class-label-module-CX73KW-la_1773762903410.txt  Pasted-21-02-12-017-Running-build-in-Portland-USA-West-pdx1-21_1773761578636.txt  Pasted-21-25-52-456-Running-build-in-Portland-USA-West-pdx1-21_1773762982936.txt  Pasted-21-27-47-528-Running-build-in-Portland-USA-West-pdx1-21_1773763091742.txt  Pasted-21-27-47-528-Running-build-in-Portland-USA-West-pdx1-21_1773763173487.txt  Pasted-21-31-06-550-Running-build-in-Portland-USA-West-pdx1-21_1773763315021.txt  Pasted-22-05-12-329-Running-build-in-Washington-D-C-USA-East-i_1773765356381.txt  Pasted-Build-Failed-No-Output-Directory-named-public-found-aft_1773763412052.txt  Pasted-Skip-to-contentwith-us-api-server-gs9c-Deployment-Overv_1773763830731.txt
lib/api-spec/: openapi.yaml
scripts/src/: seed-products.ts  stripeClient.ts
(+11 files in other folders)
